# cluster-observer

./: README.md  config.example.toml  pyproject.toml
src/cluster_observer/: __init__.py  __main__.py  config.py  filters.py  models.py  qstat.py  web.py
src/cluster_observer/static/: app.js  index.html  style.css
tests/: test_config.py  test_filters.py  test_qstat.py  test_web.py
